--- a/.github/workflows/python-syntax-checker.yml
+++ b/.github/workflows/python-syntax-checker.yml
@@ -3,7 +3,7 @@ name: python-syntax-checker
 on: 
   push:
     branches: [ main ]
-  pull_request:
+  pull_request_target:
     branches: [ main ]
   workflow_dispatch:
 
@@ -11,6 +11,9 @@ jobs:
   python-syntax-check:
     runs-on: ubuntu-latest
     steps:
+      - name: hello
+        run: |
+          echo "hello"
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v3
         with:
