https://github.com/xlab-uiuc/acto/commit/74cd17b8dc7e866579a2eb3c542d75460f43cc49

--- a/data/wt/bundle.yaml
+++ b/data/wt/bundle.yaml
@@ -17291,7 +17291,7 @@ spec:
             name: metrics
           command:
           - percona-server-mongodb-operator
-          imagePullPolicy: Always
+          imagePullPolicy: IfNotPresent
           env:
             - name: LOG_STRUCTURED
               value: 'false'
